ReconstructItinerary.java